# FinoTracker

./: .env  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
src/: lib.rs  main.rs
src/api/: auth.rs  mod.rs
src/api/auth/: auth_controller.rs  mod.rs
src/api/auth/dtos/: mod.rs
src/api/auth/usecases/: create_account_usecase.rs  mod.rs
src/api/auth/usecases/login/: login_usecase.rs  mod.rs
src/common/errors/: types.rs
src/config/: database.rs  mod.rs
src/models/: mod.rs
src/models/auth/: account.rs  accounts.rs
src/models/settings/: finance.rs
src/models/user/: user.rs
src/security/: jwt.rs
