[package]
name = "fino_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
futures-util = "0.3.30"
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
mongodb = "3.1.0"
regex = "1.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.12", features = ["derive"] }
